# embeddings

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bench.py  pyproject.toml  train.py
CLAUDE_DOCS/: embedding-benchmark.md
paper/: math_embeddings.tex
python/embench/: __init__.py  bench.py  extract.py  ground_truth.py  report.py  training_data.py
python/embench/models/: __init__.py  base.py  mlx_embed.py  openai_embed.py  scientific_embed.py
rust/emb-metrics/: Cargo.toml
rust/emb-metrics/src/: cosine.rs  knn.rs  lib.rs  metrics.rs
tests/: conftest.py  test_bench.py  test_extract.py  test_ground_truth.py  test_metrics_integration.py  test_models.py
